# OpenGL-Ray-Tracer

./: .gitignore  CMakeLists.txt  Cone.cpp  Cone.h  Cube.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h
